2002-08-03  Bart Veer  <bartv@ecoscentric.com>

	* common/Makefile.am, common/configure.in, common/acinclude.m4:
	Rework host-side autoconf support

2000-09-15  Jesper Skov  <jskov@redhat.com>

	* common/Makefile.in: Regenerated.
	* common/configure: Ditto.

	* common/eCosSocket.h: Made SSReadResult enum public.

	* common/Makefile.am: Added autoconf/make support.
	* common/Makefile.in: Ditto.
	* common/configure: Ditto.
	* common/configure.in: Ditto.
	* common/acinclude.m4: Ditto.
	* common/aclocal.m4: Ditto.

	* common/wcharunix.h (_tperror): Make putenv convert String to
	char*.

2000-08-01  Jonathan Larmour  <jlarmour@redhat.co.uk>

	* common/eCosSerial.h: 
	* common/eCosSerial.cpp:
	Add support for setting RTSCTS, DSRDTR and XONXOFF flow control
	for both win32 and unix

2000-04-14 Simon FitzMaurice <sdf@redhat.co.uk>
  * common\Subprocess.cpp
    common\Subprocess.h

  Always attempt to kill a process explicitly (don't let Cygwin processes linger)

2000-04-13 Simon FitzMaurice <sdf@redhat.co.uk>
  * common\eCosSerial.cpp
    common\eCosSocket.cpp
    common\eCosTrace.cpp

  Tidy up timestamp output.
    
2000-04-11 Simon FitzMaurice <sdf@redhat.co.uk>
  * common\Collections.cpp
    common\Collections.h
    common\Properties.cpp
    common\Properties.h
    common\eCosStd.h
    common\eCosThreadUtils.cpp
    common\eCosThreadUtils.h
    common\eCosTrace.cpp
    common\eCosTrace.h
    common\wcharunix.h
    win32\CTUtils.cpp

  General tidy-up.  

2000-03-13 Simon FitzMaurice <sdf@redhat.co.uk>
  * common\Collections.cpp
    common\Properties.cpp
    common\eCosStd.cpp
    common\eCosStd.h
    common\eCosThreadUtils.cpp
    common\eCosThreadUtils.h
    common\eCosTrace.cpp

	Mark UNIX sections of code as such.
	Correct bug in GetBuffer() - always allow enough space for allocation of *old* string.

2000-03-10 Simon FitzMaurice <sdf@redhat.co.uk>
  * common\eCosStd.cpp
    common\eCosStd.h
    common\eCosThreadUtils.cpp

	Move CeCosTrace class to its own file
