@@ -1,3 +1,11 @@
+2003-01-20  John Dallaway  <jld@ecoscentric.com>
+
+	* common/eCosStd.h:
+	#include winsock2.h and process.h for Cygwin builds.
+
+	* common/Properties.cpp:
+	Use MIN macro rather than min() for portability.
+
 2002-08-03  Bart Veer  <bartv@ecoscentric.com>
 
 	* common/Makefile.am, common/configure.in, common/acinclude.m4:
